# libuio

./: .gitattributes  .gitignore  Makefile.in  README  aclocal.m4  configure
src/: Makefile.am  Makefile.in  uio_get_event_count.c  uio_get_mem_size.c  uio_helper.c  uio_helper.h  uio_line_from_file.c  uio_munmap.c  uio_single_mmap.c  uio_single_munmap.c
tools/: Makefile.in  lsuio.c  rwuio.c
